# lens

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SHIP_CHECKLIST.md  dist-workspace.toml
.github/workflows/: ci.yml
docs/: SHIP_CHECKLIST.md
docs/plans/: 2026-07-01-lens-cli-design.md
examples/: debug_caption.rs
src/: budget.rs  cli.rs  config.rs  envelope.rs  error.rs  find.rs  indexer.rs  lib.rs  main.rs  normalize.rs  store.rs  walk.rs
src/commands/: capabilities.rs  doctor.rs  find.rs  index.rs  mod.rs  schema.rs  status.rs
src/providers/: cerebras.rs  mod.rs
tests/: cli.rs
tests/common/: mod.rs
