[package]
name = "lens"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Agent-first CLI for natural-language image-library search: caption once with Cerebras vision, then search the whole index in one model call."
license = "Apache-2.0"
repository = "https://github.com/treygoff24/lens"
readme = "README.md"
keywords = ["cli", "image-search", "ai-agents", "vision", "cerebras"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"
ureq = { version = "3.3.0", features = ["json", "rustls"] }
base64 = "0.22.1"
image = "0.25.10"
sha2 = "0.11.0"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.27.0"
